# Telco-Customer-Churn

./: .gitignore  01_eda.py  02_pipeline_logreg.py  02_train_pipeline.py  README.md  pyproject.toml  requirements.txt
artifacts/: feature_columns.json  telco_churn_best_pipeline.joblib
notebooks/: 01_data_overview.ipynb  01_problem_understanding.ipynb  02_data_cleaning.ipynb  02_data_overview.ipynb  03_data_cleaning.ipynb  03_data_validation.ipynb  04_data_cleaning.ipynb  05_univariate_analysis.ipynb  06_bivariate_analysis.ipynb  07_multivariate_analysis.ipynb  08_feature_engineering.ipynb  08_outlier_analysis.ipynb  09_feature_engineering.ipynb  10_feature_selection.ipynb  10_feature_selection_standalone.ipynb  11_eda_insights.ipynb  12_final_summary.ipynb
src/: config.py
src/config/: __init__.py  config.py
src/data/: data_cleaning.py  data_loader.py  data_validation.py
src/features/: __init__.py  feature_engineering.py  feature_selection.py
