[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-customer-churn"
version = "0.1.0"
description = "Customer churn analysis and modeling on the WA_Fn-UseC_-Telco-Customer-Churn dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
    "imbalanced-learn==0.12.3",
    "jupyter==1.0.0",
]
