[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-customer-churn"
version = "0.1.0"
description = "Customer churn analysis and modeling on the WA_Fn-UseC_-Telco-Customer-Churn dataset."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
]
